Name:                bast
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable bast
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     bytestring                >= 0.9.1   && < 0.11,
                     heist                     >= 0.12    && < 0.13,
                     MonadCatchIO-transformers >= 0.2.1   && < 0.4,
                     mtl                       >= 2       && < 3,
                     snap                      >= 0.11    && < 0.13,
                     snap-core                 >= 0.9     && < 0.11,
                     snap-server               >= 0.9     && < 0.11,
                     snap-loader-static        >= 0.9     && < 0.10,
                     text                      >= 0.11    && < 0.12,
                     time                      >= 1.1     && < 1.5,
                     xmlhtml                   >= 0.1,
                     base                      >= 4.4      && < 5,
                     lens                      >= 3.7.6    && < 3.10,
                     snaplet-acid-state        >= 0.2.3.2,
                     network-bitcoin           >= 1.3.0,
                     aws                       >= 0.7.6.4,
                     transformers              >= 0.3.0.0,
                     unix                      >= 2.6.0.1,
                     filepath                  >= 1.3.0.1,
                     conduit                   >= 1.0.5.1,
                     http-conduit              >= 1.9.4,
                     containers                >= 0.5.0.0


  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind

